--- a/Logo/css/logo.css
+++ b/Logo/css/logo.css
@@ -108,12 +108,6 @@ header ul {
   }
 }
 
-header ul button {
-  background: none;
-  color: #f7fdfe;
-  border: 1px solid #f7fdfe;
-}
-
 header a {
   color: #82868f;
   font-size: 14px;
@@ -123,6 +117,7 @@ header a {
   transition: 0.3s;
   padding: 10px 30px;
   text-decoration: none;
+  text-align: center;
 }
 
 @media screen and (max-width: 480px) {
@@ -444,6 +439,7 @@ header a:hover {
   border-radius: 50px;
   border: 1.4px solid #f7fdfe;
   text-decoration: none;
+  text-align: center;
   font-family: sans-serif;
   font-weight: bold;
   font-size: 14px;
@@ -607,20 +603,19 @@ footer .footer-1 .logos ul {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    margin-top: 18px;
   }
 }
 
 footer .footer-1 .logos li {
   color: #f7fdfe;
-  border: 1px solid #f7fdfe;
-  border-radius: 50%;
-  padding: 8px 10px;
   margin-left: 10px;
 }
 
 @media screen and (max-width: 480px) {
   footer .footer-1 .logos li {
     border: none;
+    margin-bottom: 20px;
   }
 }
 
@@ -629,10 +624,15 @@ footer .footer-1 .logos a {
   font-size: 14px;
   font-family: sans-serif;
   color: #f7fdfe;
+  padding: 8px 10px;
+  border: 1px solid #f7fdfe;
+  border-radius: 50%;
+  background-color: #444446;
 }
 
 footer .footer-1 .logos a:hover {
   color: #82868f;
+  border-color: #82868f;
 }
 
 @media screen and (max-width: 480px) {
