--- a/Logo/css/logo.css
+++ b/Logo/css/logo.css
@@ -418,8 +418,7 @@ header a:hover {
 }
 
 .team img:hover {
-  position: relative;
-  bottom: 14px;
+  margin-top: -30px;
 }
 
 @media screen and (max-width: 568px) {
