--- a/Logo/css/logo.scss
+++ b/Logo/css/logo.scss
@@ -238,8 +238,7 @@ header{
             height: 220px;
         }
         &:hover{
-            position: relative;
-            bottom: 14px;
+            margin-top: -30px;
             @include mQ(568px){
                 opacity: 0.5;
                 transition: 0.2s;
