--- a/Logo/css/logo.css
+++ b/Logo/css/logo.css
@@ -408,6 +408,7 @@ header a:hover {
   border-radius: 50%;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 480px) {
@@ -418,7 +419,7 @@ header a:hover {
 }
 
 .team img:hover {
-  margin-top: -30px;
+  margin-top: -40px;
 }
 
 @media screen and (max-width: 568px) {
@@ -553,6 +554,7 @@ footer .footer-1 .contact ul {
             flex-direction: column;
     padding-bottom: 10px;
     border-right: 1px solid #82868f;
+    margin-top: 20px;
   }
 }
 
